--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -1,22 +1,6 @@
-<!doctype html>
-<title>Crowdsourced Random Number</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="/static/style.css" />
+{% extends "layout.html" %}
 
-<script src="https://unpkg.com/htmx.org@2.0.1/dist/htmx.js"></script>
-<script src="https://unpkg.com/htmx-ext-ws@2.0.1/ws.js"></script>
-<script src="https://unpkg.com/htmx-ext-json-enc@2.0.1/json-enc.js"></script>
-
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap"
-  rel="stylesheet"
-/>
-
-<h1>Natural Random Numbers</h1>
-
-<main>
+{% block main %}
   <form
     id="entry-form"
     hx-post="api/submit_random"
@@ -46,4 +30,4 @@
       </div>
     {% endblock %}
   </div>
-</main>
+{% endblock %}
