--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -6,6 +6,11 @@
 <script src="https://unpkg.com/htmx.org@2.0.1/dist/htmx.js"></script>
 <script src="https://unpkg.com/htmx-ext-ws@2.0.1/ws.js"></script>
 <script src="https://unpkg.com/htmx-ext-json-enc@2.0.1/json-enc.js"></script>
+<script type="module">
+  import { ghostCursor } from "/static/ghostCursor.js";
+
+  new ghostCursor();
+</script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
