--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -1,6 +1,12 @@
 <!doctype html>
-<title>really really good random number generator</title>
+<title>really really good random number generator</a></title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap"
+  rel="stylesheet"
+/>
 <link rel="stylesheet" href="/static/style.css" />
 
 <script src="https://unpkg.com/htmx.org@2.0.1/dist/htmx.js"></script>
@@ -12,16 +18,13 @@
   new ghostCursor();
 </script>
 
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap"
-  rel="stylesheet"
-/>
-
-<h1>really really good random number generator</h1>
+<h1><a href="/">really really good random number generator</a></h1>
 
 <main>
   {% block main %}
   {% endblock %}
 </main>
+
+<footer>
+  <a href="/stats">stats</a>
+</footer>
