--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -70,6 +70,8 @@ h6 {
 h1 {
   position: absolute;
   top: 0px;
+  text-align: center;
+  font-size: 6vh;
 }
 
 body {
@@ -88,6 +90,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  justify-self: center;
   gap: 30px;
 }
 
