--- a/assets/templates/about.html
+++ b/assets/templates/about.html
@@ -2,8 +2,8 @@
 
 {% block main %}
   <p>
-    Created by <a href="https://swlody.dev">Sam Wlody</a> at the
-    <a href="https://recurse.com">Recurse Center</a>. (<a
+    Created by <a href="https://swlody.dev">Sam Wlody</a> @
+    <a href="https://recurse.com">Recurse Center</a> (<a
       title="please don't hack me"
       href="https://github.com/swlody/random-crowdsourced"
       >code</a
