--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -94,9 +94,32 @@ main {
   gap: 30px;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 input {
   height: 40px;
   width: 200px;
+  outline: 4px solid transparent;
+  transition: outline-color 2s ease-out;
+}
+
+input.success {
+  outline-color: green;
+  transition: none;
+}
+
+input.warning {
+  outline-color: yellow;
+  transition: none;
+}
+
+input.error {
+  outline-color: red;
+  transition: none;
 }
 
 button {
@@ -112,6 +135,9 @@ button {
   border: 1px solid;
   margin: 10px;
   background-color: lavender;
+  max-height: 50vh;
+  width: 35vw;
+  overflow: auto;
 }
 
 footer {
