remove unused css class

--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -18,12 +18,7 @@
             {{ classes|safe }}
           />
         {% else %}
-          <input
-            id="random-input"
-            name="random_number"
-            type="number"
-            class="base"
-          />
+          <input id="random-input" name="random_number" type="number" />
         {% endif %}
         <button id="submit-button" type="submit">Send random number</button>
       </div>
