--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -132,6 +132,9 @@ button {
   padding-bottom: 10px;
   padding-left: 50px;
   padding-right: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border: 1px solid;
   margin: 10px;
   background-color: lavender;
