--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -1,27 +1,43 @@
 <!doctype html>
-<title>really really good random number generator</a></title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap"
-  rel="stylesheet"
-/>
-<link rel="stylesheet" href="/static/style.css" />
+<head>
+  <title>really really good random number generator</a></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="/static/style.css" />
 
-<script src="https://unpkg.com/htmx.org@2.0.1/dist/htmx.js"></script>
-<script src="https://unpkg.com/htmx-ext-ws@2.0.1/ws.js"></script>
-<script src="https://unpkg.com/htmx-ext-class-tools@2.0.1/class-tools.js"></script>
-<script src="https://unpkg.com/htmx-ext-json-enc@2.0.1/json-enc.js"></script>
+  <script src="https://unpkg.com/htmx.org@2.0.1/dist/htmx.js"></script>
+  <script src="https://unpkg.com/htmx-ext-ws@2.0.1/ws.js"></script>
+  <script src="https://unpkg.com/htmx-ext-class-tools@2.0.1/class-tools.js"></script>
+  <script src="https://unpkg.com/htmx-ext-json-enc@2.0.1/json-enc.js"></script>
+  <script>
+    document.addEventListener('htmx:wsOpen', (evt) => {
+      let socket = evt.detail.socketWrapper;
+      window.addEventListener("beforeunload", () => {
+        socket.close();
+      });
+    });
 
-<h1><a href="/">really really good random number generator</a></h1>
+    document.addEventListener('htmx:wsClose', (evt) => {
+      console.log("closed!");
+    })
+  </script>
+</head>
 
-<main>
-  {% block main %}
-  {% endblock %}
-</main>
+<body>
+  <h1><a href="/">really really good random number generator</a></h1>
 
-<footer>
-  <a href="/stats">stats</a>
-  <a href="/about">about</a>
-</footer>
+  <main>
+    {% block main %}
+    {% endblock %}
+  </main>
+
+  <footer>
+    <a href="/stats">stats</a>
+    <a href="/about">about</a>
+  </footer>
+</body>
